--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,14 @@
             "name": "Oleksii Nikishkin",
             "email": "aleks.nikishin.mk@gmail.com"
         }
-    ]
+    ],
+    "minimum-stability": "dev",
+    "require": {
+        "php": ">=5.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "OleksiiNikishkin\\ValidateEmails\\": "src"
+        }
+    }
 }
