Added helper function, readme

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
     "autoload": {
         "psr-4": {
             "OleksiiNikishkin\\ValidateEmails\\": "src"
-        }
+        },
+        "files": [
+            "src/helpers.php"
+        ]
     }
 }
